--- a/ImgurProject/app/src/main/res/layout/activity_main.xml
+++ b/ImgurProject/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,11 @@
         android:background="@color/white"
         android:tint="@color/white"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressText"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
 </android.support.design.widget.CoordinatorLayout>
