--- a/ImgurProject/app/src/main/res/layout/content_scrolling.xml
+++ b/ImgurProject/app/src/main/res/layout/content_scrolling.xml
@@ -18,6 +18,11 @@
         android:id="@+id/ScrollLayout"
         android:orientation="vertical">
 
+        <ListView android:id="@android:id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:drawSelectorOnTop="false"/>
+
     </LinearLayout>
 
 
