--- a/ImgurProject/app/src/main/res/values/dimens.xml
+++ b/ImgurProject/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_right_margin">16dp</dimen>
+    <dimen name="activity_left_margin">16dp</dimen>
+    <dimen name="activity_top_margin">16dp</dimen>
+    <dimen name="activity_bottom_margin">40dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
